ops_app/deployments/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      run: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        run: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: git.perceptyx.com:4567/external/ops_app/${APPLICATION_NAME}:${BRANCH}
          imagePullPolicy: Always
          ports:
          - name: ${APPLICATION_NAME}
            containerPort: 3000
          resources:
            requests:
              memory: 700Mi
              cpu: 600m
            limits:
              memory: 900Mi
              cpu: 800m
      imagePullSecrets:
        - name: gitlabregistrypullsecret
